--- a/index.html
+++ b/index.html
@@ -2,9 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Ilyas' Portfolio</title>
 </head>
 <body>
-
+    <header class="main-header">
+        <div class="wrapper">
+            <h1 class="name"><a href="#">Ilyas Kerbal</a></h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="banner">
+                <p>I am a mobile developer. I have started learning programming since 2007. My first language was PHP. Currently, I am learning the basics of front-end web developments. I love to build things and automate my daily tasks using what I have learned. </p>
+                <img alt="profile avatar image" src="images/responsive-layout-profile.png">
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="wrapper">
+            <section id="portfolio">
+                <h2>Portfolio</h2>
+                <div class="grid">
+                    <div class="item">
+                        <img alt="Marketing page" src="images/portfolio-1.png">
+                        <h3>Marketing Page</h3>
+                        <p>This project shows the front page of a marketing website meant for a specific business I'm interested</p>
+                    </div>
+                    <div class="item">
+                        <img alt="Search Page" src="images/portfolio-2.png">
+                        <h3>Search Page</h3>
+                        <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+                    </div>
+                    <div class="item">
+                        <img alt="Travel app" src="images/portfolio-3.png">
+                        <h3>Travel App</h3>
+                        <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+                    </div>
+                    <div class="item">
+                        <img alt="Map of Favorite Spots" src="images/portfolio-4.png">
+                        <h3>Map of Favorite Spots</h3>
+                        <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour</p>
+                    </div>
+                    <div class="item">
+                        <img alt="Photo Gallery" src="images/portfolio-5.png">
+                        <h3>Photo Gallery</h3>
+                        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+                    </div>
+                    <div class="item">
+                        <img alt="Calculator" src="images/portfolio-6.png">
+                        <h3>Calculator</h3>
+                        <p>Someone can enter in the numbers they want and press the big blue button and get the results.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="wrapper">
+            <section id="contact">
+                <h2>Contact</h2>
+                <p>If you're interested in chatting or want more information about what I've been working on; I'd love to hear from you!</p>
+                <p>Phone <strong>+21268156341</strong></p>
+                <p>Email <strong>contact@ilyaskerbal.com</strong></p>
+            </section>
+            <hr class="separator">
+            <h3>Ilyas Kerbal</h3>
+            <nav>
+                <ul class="footer-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <a href="#top">Back to Top</a>
+        </div>
+    </footer>
 </body>
 </html>
